--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@
 /.pnp
 .pnp.js
 
+# yarn 2
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
 # testing
 /coverage
 
