--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@angular/compiler": "12.0.0",
+    "@tailwindcss/forms": "^0.3.2",
     "@types/lodash": "4.14.169",
     "handlebars-to-jsx": "0.1.2",
     "lodash": "4.17.21",
     "next": "10.2.0",
-    "normalize.css": "8.0.1",
     "patch-package": "6.4.7",
     "postinstall-postinstall": "2.1.0",
     "prettier": "2.3.0",
@@ -24,6 +24,9 @@
   "devDependencies": {
     "@types/node": "14.14.45",
     "@types/react": "17.0.5",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
     "typescript": "4.2.4"
   }
 }
