--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postinstall-postinstall": "2.1.0",
     "prettier": "2.3.0",
     "react": "17.0.2",
+    "react-attr-converter": "^0.3.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
