convert to nx workspace

--- a/package.json
+++ b/package.json
@@ -1,34 +1,86 @@
 {
-  "name": "convert-handlebars",
-  "version": "0.1.0",
-  "private": true,
+  "name": "ctj",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "postinstall": "patch-package"
+    "nx": "nx",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "lint": "nx workspace-lint && nx lint",
+    "e2e": "nx e2e",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "nx migrate latest",
+    "workspace-generator": "nx workspace-generator",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help"
   },
+  "private": true,
   "dependencies": {
-    "@angular/compiler": "12.0.0",
-    "@tailwindcss/forms": "^0.3.2",
-    "@types/lodash": "4.14.169",
-    "handlebars-to-jsx": "0.1.2",
-    "lodash": "4.17.21",
+    "@angular/compiler": "^12.0.0",
+    "@glimmer/syntax": "^0.79.1",
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
+    "is-self-closing": "^1.0.1",
+    "lodash": "^4.17.21",
     "next": "10.2.0",
-    "patch-package": "6.4.7",
-    "postinstall-postinstall": "2.1.0",
-    "prettier": "2.3.0",
     "react": "17.0.2",
     "react-attr-converter": "^0.3.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "14.14.45",
-    "@types/react": "17.0.5",
+    "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
+    "@nrwl/cli": "12.3.3",
+    "@nrwl/cypress": "12.3.3",
+    "@nrwl/eslint-plugin-nx": "12.3.3",
+    "@nrwl/jest": "12.3.3",
+    "@nrwl/linter": "12.3.3",
+    "@nrwl/next": "12.3.3",
+    "@nrwl/react": "12.3.3",
+    "@nrwl/tao": "12.3.3",
+    "@nrwl/web": "12.3.3",
+    "@nrwl/workspace": "12.3.3",
+    "@tailwindcss/forms": "^0.3.2",
+    "@testing-library/react": "11.2.6",
+    "@types/jest": "26.0.8",
+    "@types/lodash": "^4.14.169",
+    "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "autoprefixer": "latest",
+    "babel-jest": "26.2.2",
+    "cypress": "^6.0.1",
+    "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "26.2.2",
     "postcss": "latest",
+    "prettier": "2.2.1",
     "tailwindcss": "latest",
-    "typescript": "4.2.4",
-    "webpack-merge": "^5.7.3"
+    "ts-jest": "26.5.5",
+    "ts-node": "~9.1.1",
+    "typescript": "~4.2.4"
   }
 }
