--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@angular/compiler": "^12.0.0",
     "@glimmer/syntax": "^0.79.1",
+    "@nrwl/nx-cloud": "^12.1.1",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "is-self-closing": "^1.0.1",
