handle more edge cases with converter

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@glimmer/syntax": "^0.79.1",
     "@nrwl/nx-cloud": "^12.1.1",
     "core-js": "^3.6.5",
+    "css-to-style": "^1.4.0",
     "document-register-element": "1.13.1",
     "is-self-closing": "^1.0.1",
     "lodash": "^4.17.21",
@@ -58,6 +59,7 @@
     "@nrwl/workspace": "12.3.3",
     "@tailwindcss/forms": "^0.3.2",
     "@testing-library/react": "11.2.6",
+    "@types/css-to-style": "^1.2.0",
     "@types/jest": "26.0.8",
     "@types/lodash": "^4.14.169",
     "@types/node": "14.14.33",
