--- a/package.json
+++ b/package.json
@@ -27,63 +27,70 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/compiler": "^12.0.0",
+    "@angular/compiler": "^13.2.3",
     "@glimmer/syntax": "^0.79.1",
-    "@nrwl/nx-cloud": "^12.1.1",
-    "core-js": "^3.6.5",
+    "@nrwl/next": "13.8.3",
+    "@nrwl/nx-cloud": "^13.1.4",
+    "core-js": "^3.21.1",
     "css-to-style": "^1.4.0",
-    "document-register-element": "1.13.1",
+    "document-register-element": "1.14.10",
+    "handlebars-to-jsx": "^0.1.5",
     "is-self-closing": "^1.0.1",
     "lodash": "^4.17.21",
-    "next": "10.2.0",
+    "next": "12.1.0",
     "react": "17.0.2",
     "react-attr-converter": "^0.3.1",
     "react-dom": "17.0.2",
-    "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "regenerator-runtime": "0.13.9",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
-    "@babel/preset-env": "7.12.13",
-    "@babel/preset-react": "7.12.13",
-    "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "12.3.3",
-    "@nrwl/cypress": "12.3.3",
-    "@nrwl/eslint-plugin-nx": "12.3.3",
-    "@nrwl/jest": "12.3.3",
-    "@nrwl/linter": "12.3.3",
-    "@nrwl/next": "12.3.3",
-    "@nrwl/react": "12.3.3",
-    "@nrwl/tao": "12.3.3",
-    "@nrwl/web": "12.3.3",
-    "@nrwl/workspace": "12.3.3",
-    "@tailwindcss/forms": "^0.3.2",
-    "@testing-library/react": "11.2.6",
+    "@babel/core": "7.17.5",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-typescript": "7.16.7",
+    "@nrwl/cli": "13.8.3",
+    "@nrwl/cypress": "13.8.3",
+    "@nrwl/eslint-plugin-nx": "13.8.3",
+    "@nrwl/jest": "13.8.3",
+    "@nrwl/js": "13.8.3",
+    "@nrwl/linter": "13.8.3",
+    "@nrwl/next": "13.8.3",
+    "@nrwl/react": "13.8.3",
+    "@nrwl/tao": "13.8.3",
+    "@nrwl/web": "13.8.3",
+    "@nrwl/workspace": "13.8.3",
+    "@tailwindcss/forms": "^0.4.0",
+    "@testing-library/react": "12.1.3",
+    "@testing-library/react-hooks": "7.0.2",
     "@types/css-to-style": "^1.2.0",
-    "@types/jest": "26.0.8",
-    "@types/lodash": "^4.14.169",
-    "@types/node": "14.14.33",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
-    "autoprefixer": "latest",
-    "babel-jest": "26.2.2",
-    "cypress": "^6.0.1",
-    "dotenv": "8.2.0",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.23.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "26.2.2",
-    "postcss": "latest",
-    "prettier": "2.2.1",
-    "tailwindcss": "latest",
-    "ts-jest": "26.5.5",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.2.4"
-  }
+    "@types/jest": "27.4.0",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "14.18.12",
+    "@types/react": "17.0.39",
+    "@types/react-dom": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "5.12.0",
+    "@typescript-eslint/parser": "5.12.0",
+    "autoprefixer": "^10.4.2",
+    "babel-jest": "27.5.1",
+    "cypress": "^9.5.0",
+    "dotenv": "16.0.0",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "8.4.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "jest": "27.5.1",
+    "postcss": "^8.4.6",
+    "prettier": "2.5.1",
+    "react-test-renderer": "17.0.2",
+    "tailwindcss": "^3.0.23",
+    "ts-jest": "27.1.3",
+    "ts-node": "~10.5.0",
+    "typescript": "4.5.5"
+  },
+  "packageManager": "yarn@3.1.1"
 }
