--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
     "@angular/compiler": "13.3.11",
     "@glimmer/syntax": "0.84.2",
     "@nrwl/next": "13.9.0",
-    "@nrwl/nx-cloud": "13.1.6",
+    "@nrwl/nx-cloud": "14.0.5",
     "core-js": "3.22.8",
     "css-to-style": "1.4.0",
     "document-register-element": "1.14.10",
     "handlebars-to-jsx": "0.1.5",
     "is-self-closing": "1.0.1",
     "lodash": "4.17.21",
-    "next": "12.1.6",
+    "next": "12.1.5",
     "react": "18.1.0",
     "react-attr-converter": "0.3.1",
     "react-dom": "18.1.0",
+    "react-is": "18.0.0",
     "regenerator-runtime": "0.13.9",
     "tslib": "2.4.0"
   },
@@ -49,46 +50,45 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "7.17.12",
-    "@nrwl/cli": "13.9.0",
-    "@nrwl/cypress": "13.9.0",
-    "@nrwl/eslint-plugin-nx": "13.9.0",
-    "@nrwl/jest": "13.9.0",
-    "@nrwl/js": "13.9.0",
-    "@nrwl/linter": "13.9.0",
-    "@nrwl/next": "13.9.0",
-    "@nrwl/react": "13.9.0",
-    "@nrwl/tao": "13.9.0",
-    "@nrwl/web": "13.9.0",
-    "@nrwl/workspace": "13.9.0",
+    "@nrwl/cli": "14.1.9",
+    "@nrwl/cypress": "14.1.9",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.1.9",
+    "@nrwl/js": "14.1.9",
+    "@nrwl/linter": "14.1.9",
+    "@nrwl/next": "14.1.9",
+    "@nrwl/react": "14.1.9",
+    "@nrwl/tao": "14.1.9",
+    "@nrwl/web": "14.1.9",
+    "@nrwl/workspace": "14.1.9",
     "@tailwindcss/forms": "0.5.2",
-    "@testing-library/react": "13.3.0",
-    "@testing-library/react-hooks": "8.0.0",
+    "@testing-library/react": "13.1.1",
     "@types/css-to-style": "1.2.0",
-    "@types/jest": "28.1.0",
+    "@types/jest": "27.4.1",
     "@types/lodash": "4.14.182",
     "@types/node": "16.11.38",
-    "@types/react": "18.0.10",
-    "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "5.27.0",
-    "@typescript-eslint/parser": "5.27.0",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "autoprefixer": "10.4.7",
-    "babel-jest": "28.1.0",
+    "babel-jest": "27.5.1",
     "cypress": "10.0.1",
     "dotenv": "16.0.1",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
-    "jest": "28.1.0",
+    "jest": "27.5.1",
     "postcss": "8.4.14",
     "prettier": "2.6.2",
     "react-test-renderer": "18.1.0",
     "tailwindcss": "3.0.24",
-    "ts-jest": "28.0.3",
+    "ts-jest": "27.1.4",
     "ts-node": "10.8.0",
     "typescript": "4.7.2"
   },
