update nx version and fix ref conversion

--- a/nx.json
+++ b/nx.json
@@ -26,9 +26,6 @@
       }
     }
   },
-  "cli": {
-    "defaultCollection": "@nrwl/next"
-  },
   "generators": {
     "@nrwl/react": {
       "application": {
@@ -43,12 +40,12 @@
     }
   },
   "defaultProject": "website",
-  "targetDependencies": {
-    "build": [
-      {
-        "target": "build",
-        "projects": "dependencies"
-      }
-    ]
+  "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "targetDefaults": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ]
+    }
   }
 }
