--- a/libs/angular-to-jsx/project.json
+++ b/libs/angular-to-jsx/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/angular-to-jsx/src",
   "projectType": "library",
   "targets": {
