--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@angular/compiler": "14.1.2",
     "@glimmer/syntax": "0.84.2",
-    "@nrwl/nx-cloud": "14.2.0",
+    "@nrwl/nx-cloud": "14.3.0",
     "core-js": "3.24.1",
     "css-to-style": "1.4.0",
     "document-register-element": "1.14.10",
@@ -49,22 +49,22 @@
     "@babel/preset-env": "7.18.10",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
-    "@nrwl/cypress": "14.4.2",
-    "@nrwl/eslint-plugin-nx": "14.4.2",
-    "@nrwl/jest": "14.4.2",
-    "@nrwl/js": "14.4.2",
-    "@nrwl/linter": "14.4.2",
-    "@nrwl/next": "14.4.2",
-    "@nrwl/react": "14.4.2",
-    "@nrwl/tao": "14.4.2",
-    "@nrwl/web": "14.4.2",
-    "@nrwl/workspace": "14.4.2",
+    "@nrwl/cypress": "14.5.6",
+    "@nrwl/eslint-plugin-nx": "14.5.6",
+    "@nrwl/jest": "14.5.6",
+    "@nrwl/js": "14.5.6",
+    "@nrwl/linter": "14.5.6",
+    "@nrwl/next": "14.5.6",
+    "@nrwl/react": "14.5.6",
+    "@nrwl/tao": "14.5.6",
+    "@nrwl/web": "14.5.6",
+    "@nrwl/workspace": "14.5.6",
     "@tailwindcss/forms": "0.5.2",
     "@testing-library/react": "13.3.0",
     "@types/css-to-style": "1.2.0",
     "@types/jest": "27.5.2",
     "@types/lodash": "4.14.182",
-    "@types/node": "18.0.3",
+    "@types/node": "18.7.3",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.33.0",
@@ -82,14 +82,15 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "27.5.1",
-    "nx": "14.4.2",
+    "nx": "14.5.6",
     "postcss": "8.4.16",
     "prettier": "2.7.1",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.1.8",
     "ts-jest": "27.1.5",
     "ts-node": "10.9.1",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "webpack": "^5.74.0"
   },
   "packageManager": "yarn@3.2.2"
 }
