--- a/apps/website/project.json
+++ b/apps/website/project.json
@@ -14,7 +14,9 @@
       },
       "configurations": {
         "production": {},
-        "development": {}
+        "development": {
+          "outputPath": "apps/website"
+        }
       },
       "defaultConfiguration": "production"
     },
