--- a/apps/website/project.json
+++ b/apps/website/project.json
@@ -47,7 +47,7 @@
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": [
-        "coverage/apps/website"
+        "{workspaceRoot}/coverage/apps/website"
       ],
       "options": {
         "jestConfig": "apps/website/jest.config.ts",
