--- a/libs/angular-to-jsx/project.json
+++ b/libs/angular-to-jsx/project.json
@@ -31,7 +31,7 @@
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": [
-        "coverage/libs/angular-to-jsx"
+        "{workspaceRoot}/coverage/libs/angular-to-jsx"
       ],
       "options": {
         "jestConfig": "libs/angular-to-jsx/jest.config.ts",
