--- a/package.json
+++ b/package.json
@@ -29,68 +29,68 @@
   "dependencies": {
     "@angular/compiler": "14.2.9",
     "@glimmer/syntax": "0.84.2",
-    "@nrwl/nx-cloud": "14.7.0",
-    "core-js": "3.26.0",
+    "@nrwl/nx-cloud": "15.0.2",
+    "core-js": "3.27.1",
     "css-to-style": "1.4.0",
     "document-register-element": "1.14.10",
     "handlebars-to-jsx": "0.1.5",
     "is-self-closing": "1.0.1",
     "lodash": "4.17.21",
-    "next": "13.0.0",
+    "next": "13.1.1",
     "react": "18.2.0",
     "react-attr-converter": "0.3.1",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
-    "regenerator-runtime": "0.13.10",
-    "tslib": "2.4.0"
+    "regenerator-runtime": "0.13.11",
+    "tslib": "2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "7.19.6",
-    "@babel/preset-env": "7.19.4",
+    "@babel/core": "7.20.12",
+    "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
-    "@nrwl/cypress": "15.0.0",
-    "@nrwl/eslint-plugin-nx": "15.0.0",
-    "@nrwl/jest": "15.0.0",
-    "@nrwl/js": "15.0.0",
-    "@nrwl/linter": "15.0.0",
-    "@nrwl/next": "15.0.0",
-    "@nrwl/react": "15.0.0",
-    "@nrwl/tao": "15.0.0",
-    "@nrwl/web": "15.0.0",
-    "@nrwl/workspace": "15.0.0",
+    "@nrwl/cypress": "15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.4.5",
+    "@nrwl/jest": "15.4.5",
+    "@nrwl/js": "15.4.5",
+    "@nrwl/linter": "15.4.5",
+    "@nrwl/next": "15.4.5",
+    "@nrwl/react": "15.4.5",
+    "@nrwl/tao": "15.4.5",
+    "@nrwl/web": "15.4.5",
+    "@nrwl/workspace": "15.4.5",
     "@tailwindcss/forms": "0.5.3",
     "@testing-library/react": "13.4.0",
     "@types/css-to-style": "1.2.0",
-    "@types/jest": "29.2.2",
-    "@types/lodash": "4.14.188",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
-    "@typescript-eslint/eslint-plugin": "5.42.0",
-    "@typescript-eslint/parser": "5.42.0",
+    "@types/jest": "29.2.5",
+    "@types/lodash": "4.14.191",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "29.2.2",
-    "cypress": "10.11.0",
+    "cypress": "^11.0.0",
     "dotenv": "16.0.3",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
-    "eslint-config-prettier": "8.5.0",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-jsx-a11y": "6.7.0",
+    "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "29.2.2",
-    "nx": "15.0.0",
-    "postcss": "8.4.18",
-    "prettier": "2.7.1",
+    "jest": "29.3.1",
+    "nx": "15.4.5",
+    "postcss": "8.4.21",
+    "prettier": "2.8.2",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "3.2.1",
+    "tailwindcss": "3.2.4",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4",
-    "webpack": "5.74.0"
+    "typescript": "4.9.4",
+    "webpack": "5.75.0"
   },
   "packageManager": "yarn@3.2.4"
 }
