--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "nx": "nx",
+    "dev": "nx serve",
+    "serve": "nx serve",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
@@ -29,13 +30,17 @@
   "dependencies": {
     "@angular/compiler": "15.2.2",
     "@glimmer/syntax": "0.84.2",
-    "@nrwl/nx-cloud": "15.0.2",
-    "core-js": "3.29.0",
+    "@nrwl/nx-cloud": "15.2.1",
+    "core-js": "3.29.1",
     "css-to-style": "1.4.0",
     "document-register-element": "1.14.10",
+    "eslint-plugin-mobx": "0.0.9",
     "handlebars-to-jsx": "0.1.5",
     "is-self-closing": "1.0.1",
     "lodash": "4.17.21",
+    "mobx": "6.8.0",
+    "mobx-react-lite": "3.4.3",
+    "mobx-utils": "^6.0.5",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-attr-converter": "0.3.1",
@@ -49,40 +54,40 @@
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.21.0",
-    "@nrwl/cypress": "15.4.5",
-    "@nrwl/eslint-plugin-nx": "15.4.5",
-    "@nrwl/jest": "15.4.5",
-    "@nrwl/js": "15.4.5",
-    "@nrwl/linter": "15.4.5",
-    "@nrwl/next": "15.4.5",
-    "@nrwl/react": "15.4.5",
-    "@nrwl/tao": "15.4.5",
-    "@nrwl/web": "15.4.5",
-    "@nrwl/workspace": "15.4.5",
+    "@nrwl/cypress": "15.8.6",
+    "@nrwl/eslint-plugin-nx": "15.8.6",
+    "@nrwl/jest": "15.8.6",
+    "@nrwl/js": "15.8.6",
+    "@nrwl/linter": "15.8.6",
+    "@nrwl/next": "15.8.6",
+    "@nrwl/react": "15.8.6",
+    "@nrwl/tao": "15.8.6",
+    "@nrwl/web": "15.8.6",
+    "@nrwl/workspace": "15.8.6",
     "@tailwindcss/forms": "0.5.3",
     "@testing-library/react": "14.0.0",
     "@types/css-to-style": "1.2.0",
     "@types/jest": "29.4.0",
     "@types/lodash": "4.14.191",
-    "@types/node": "18.15.0",
+    "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "5.54.1",
     "@typescript-eslint/parser": "5.54.1",
     "autoprefixer": "10.4.14",
-    "babel-jest": "29.4.3",
-    "cypress": "^12.0.0",
+    "babel-jest": "29.5.0",
+    "cypress": "12.7.0",
     "dotenv": "16.0.3",
     "eslint": "8.36.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "8.7.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "29.4.3",
-    "nx": "15.4.5",
+    "jest": "29.5.0",
+    "nx": "15.8.6",
     "postcss": "8.4.21",
     "prettier": "2.8.4",
     "react-test-renderer": "18.2.0",
@@ -92,5 +97,7 @@
     "typescript": "4.9.5",
     "webpack": "5.76.1"
   },
-  "packageManager": "yarn@3.4.1"
+  "pnpm": {
+    "onlyBuiltDependencies": []
+  }
 }
