Add pug support

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "**/*"
   ],
   "plugins": [
-    "@nrwl/nx",
+    "@nx",
     "mobx"
   ],
   "overrides": [
@@ -20,7 +20,7 @@
         "plugin:mobx/recommended"
       ],
       "rules": {
-        "@nrwl/nx/enforce-module-boundaries": [
+        "@nx/enforce-module-boundaries": [
           "error",
           {
             "enforceBuildableLibDependency": true,
@@ -43,7 +43,7 @@
         "*.tsx"
       ],
       "extends": [
-        "plugin:@nrwl/nx/typescript"
+        "plugin:@nx/typescript"
       ],
       "rules": {}
     },
@@ -53,7 +53,7 @@
         "*.jsx"
       ],
       "extends": [
-        "plugin:@nrwl/nx/javascript"
+        "plugin:@nx/javascript"
       ],
       "rules": {}
     }
