--- a/apps/website/project.json
+++ b/apps/website/project.json
@@ -1,15 +1,15 @@
 {
+  "name": "website",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/website",
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nrwl/next:build",
+      "executor": "@nx/next:build",
       "outputs": [
         "{options.outputPath}"
       ],
       "options": {
-        "root": "apps/website",
         "outputPath": "dist/apps/website"
       },
       "configurations": {
@@ -21,7 +21,7 @@
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@nrwl/next:server",
+      "executor": "@nx/next:server",
       "options": {
         "buildTarget": "website:build",
         "dev": true
@@ -39,13 +39,13 @@
       "defaultConfiguration": "development"
     },
     "export": {
-      "executor": "@nrwl/next:export",
+      "executor": "@nx/next:export",
       "options": {
         "buildTarget": "website:build:production"
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": [
         "{workspaceRoot}/coverage/apps/website"
       ],
@@ -55,7 +55,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": [
           "apps/website/**/*.{ts,tsx,js,jsx}"
@@ -65,6 +65,5 @@
         "{options.outputFile}"
       ]
     }
-  },
-  "name": "website"
+  }
 }
