--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "regenerator-runtime": "0.13.11",
-    "tslib": "2.5.0"
+    "tslib": "2.5.0",
+    "uglify-js": "^3.17.4"
   },
   "devDependencies": {
     "@babel/core": "7.22.7",
@@ -66,6 +67,7 @@
     "@nx/workspace": "16.5.0",
     "@tailwindcss/forms": "0.5.3",
     "@testing-library/react": "14.0.0",
+    "@types/babel__core": "^7.20.1",
     "@types/css-to-style": "1.2.0",
     "@types/jest": "29.5.2",
     "@types/lodash": "4.14.195",
@@ -97,6 +99,9 @@
     "webpack": "5.88.1"
   },
   "pnpm": {
-    "onlyBuiltDependencies": []
+    "onlyBuiltDependencies": [],
+    "overrides": {
+      "uglify-js": "$uglify-js"
+    }
   }
 }
