--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "dependencies": {
     "@angular/compiler": "16.0.0",
     "@glimmer/syntax": "0.84.3",
-    "@nrwl/nx-cloud": "15.3.2",
-    "core-js": "3.29.1",
+    "babel-plugin-transform-react-pug": "^7.0.1",
+    "core-js": "3.31.1",
     "css-to-style": "1.4.0",
     "document-register-element": "1.14.10",
     "eslint-plugin-mobx": "0.0.9",
@@ -40,65 +40,68 @@
     "lodash": "4.17.21",
     "mobx": "6.9.0",
     "mobx-react-lite": "3.4.3",
-    "mobx-utils": "^6.0.5",
-    "next": "13.2.4",
+    "mobx-utils": "^6.0.6",
+    "next": "13.4.8",
+    "nx-cloud": "16.0.5",
     "react": "18.2.0",
     "react-attr-converter": "0.3.1",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "regenerator-runtime": "0.13.11",
-    "tslib": "2.5.0"
+    "tslib": "2.5.0",
+    "uglify-js": "^3.17.4"
   },
   "devDependencies": {
-    "@babel/core": "7.21.3",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-react": "7.18.6",
-    "@babel/preset-typescript": "7.21.0",
-    "@nrwl/cypress": "15.8.9",
-    "@nrwl/eslint-plugin-nx": "15.8.9",
-    "@nrwl/jest": "15.8.9",
-    "@nrwl/js": "15.8.9",
-    "@nrwl/linter": "15.8.9",
-    "@nrwl/next": "15.8.9",
-    "@nrwl/react": "15.8.9",
-    "@nrwl/tao": "15.8.9",
-    "@nrwl/web": "15.8.9",
-    "@nrwl/workspace": "15.8.9",
+    "@babel/core": "7.22.7",
+    "@babel/preset-env": "7.22.7",
+    "@babel/preset-react": "7.22.5",
+    "@babel/preset-typescript": "7.22.5",
+    "@nx/cypress": "16.5.0",
+    "@nx/eslint-plugin": "16.5.0",
+    "@nx/jest": "16.5.0",
+    "@nx/js": "16.5.0",
+    "@nx/linter": "16.5.0",
+    "@nx/next": "16.5.0",
+    "@nx/react": "16.5.0",
+    "@nx/web": "16.5.0",
+    "@nx/workspace": "16.5.0",
     "@tailwindcss/forms": "0.5.3",
     "@testing-library/react": "14.0.0",
+    "@types/babel__core": "^7.20.1",
     "@types/css-to-style": "1.2.0",
-    "@types/jest": "29.5.0",
-    "@types/lodash": "4.14.192",
+    "@types/jest": "29.5.2",
+    "@types/lodash": "4.14.195",
     "@types/node": "18.15.10",
-    "@types/react": "18.0.30",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
     "autoprefixer": "10.4.14",
-    "babel-jest": "29.5.0",
-    "cypress": "12.8.1",
-    "dotenv": "16.0.3",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "babel-jest": "29.6.0",
+    "cypress": "12.16.0",
+    "dotenv": "16.3.1",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.8",
     "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-cypress": "2.13.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "29.5.0",
-    "nx": "15.8.9",
-    "postcss": "8.4.21",
+    "jest": "29.6.0",
+    "nx": "16.5.0",
+    "postcss": "8.4.24",
     "prettier": "2.8.7",
-    "react-test-renderer": "18.2.0",
-    "tailwindcss": "3.2.7",
-    "ts-jest": "29.0.5",
+    "tailwindcss": "3.3.2",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.0.2",
-    "webpack": "5.76.3"
+    "typescript": "5.1.6",
+    "webpack": "5.88.1"
   },
   "pnpm": {
-    "onlyBuiltDependencies": []
+    "onlyBuiltDependencies": [],
+    "overrides": {
+      "uglify-js": "$uglify-js"
+    }
   }
 }
-
