--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -14,14 +14,21 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "incremental": true
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     "**/*.js",
     "**/*.jsx",
-    "next-env.d.ts"
+    "next-env.d.ts",
+    "../../apps/website/.next/types/**/*.ts",
+    "../../dist/apps/website/.next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
