--- a/apps/website-e2e/project.json
+++ b/apps/website-e2e/project.json
@@ -18,7 +18,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": [
           "apps/website-e2e/**/*.{js,ts}"
