--- a/apps/website/project.json
+++ b/apps/website/project.json
@@ -50,12 +50,11 @@
         "{workspaceRoot}/coverage/apps/website"
       ],
       "options": {
-        "jestConfig": "apps/website/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "apps/website/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": [
           "apps/website/**/*.{ts,tsx,js,jsx}"
