--- a/libs/angular-to-jsx/project.json
+++ b/libs/angular-to-jsx/project.json
@@ -19,7 +19,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": [
           "libs/angular-to-jsx/**/*.ts"
@@ -35,8 +35,7 @@
         "{workspaceRoot}/coverage/libs/angular-to-jsx"
       ],
       "options": {
-        "jestConfig": "libs/angular-to-jsx/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/angular-to-jsx/jest.config.ts"
       }
     }
   }
