--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "mobx-react-lite": "4.0.5",
     "mobx-utils": "^6.0.6",
     "next": "13.4.9",
-    "nx-cloud": "16.0.5",
     "react": "18.2.0",
     "react-attr-converter": "0.3.1",
     "react-dom": "18.2.0",
@@ -56,15 +55,14 @@
     "@babel/preset-env": "7.22.7",
     "@babel/preset-react": "7.22.5",
     "@babel/preset-typescript": "7.22.5",
-    "@nx/cypress": "16.5.0",
-    "@nx/eslint-plugin": "16.5.0",
-    "@nx/jest": "16.5.0",
-    "@nx/js": "16.5.0",
-    "@nx/linter": "16.5.0",
-    "@nx/next": "16.5.0",
-    "@nx/react": "16.5.0",
-    "@nx/web": "16.5.0",
-    "@nx/workspace": "16.5.0",
+    "@nx/cypress": "17.1.2",
+    "@nx/eslint-plugin": "17.1.2",
+    "@nx/jest": "17.1.2",
+    "@nx/js": "17.1.2",
+    "@nx/next": "17.1.2",
+    "@nx/react": "17.1.2",
+    "@nx/web": "17.1.2",
+    "@nx/workspace": "17.1.2",
     "@tailwindcss/forms": "0.5.3",
     "@testing-library/react": "14.0.0",
     "@types/babel__core": "^7.20.1",
@@ -72,36 +70,38 @@
     "@types/jest": "29.5.2",
     "@types/lodash": "4.14.195",
     "@types/node": "20.8.9",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "6.0.0",
-    "@typescript-eslint/parser": "6.0.0",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@typescript-eslint/parser": "6.11.0",
     "autoprefixer": "10.4.14",
     "babel-jest": "29.6.1",
-    "cypress": "13.1.0",
+    "cypress": "^13.0.0",
     "dotenv": "16.3.1",
-    "eslint": "8.44.0",
+    "eslint": "8.46.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-cypress": "2.13.3",
+    "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "29.6.1",
-    "nx": "16.5.0",
+    "nx": "17.1.2",
     "postcss": "8.4.25",
     "prettier": "2.8.8",
     "tailwindcss": "3.3.2",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6",
-    "webpack": "5.88.1"
+    "typescript": "5.2.2",
+    "webpack": "5.88.1",
+    "@nx/eslint": "17.1.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [],
     "overrides": {
       "uglify-js": "$uglify-js"
     }
-  }
+  },
+  "packageManager": "pnpm@8.10.5+sha1.4370a069f21873a0ad83c785b8048ed8caf6e6e9"
 }
