--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "private": true,
   "dependencies": {
     "@angular/compiler": "17.0.2",
-    "@glimmer/syntax": "0.84.3",
+    "@glimmer/syntax": "0.85.13",
     "babel-plugin-transform-react-pug": "^7.0.1",
-    "core-js": "3.31.1",
+    "core-js": "3.33.2",
     "css-to-style": "1.4.0",
     "document-register-element": "1.14.10",
     "eslint-plugin-mobx": "0.0.9",
@@ -40,22 +40,23 @@
     "lodash": "4.17.21",
     "mobx": "6.11.0",
     "mobx-react-lite": "4.0.5",
-    "mobx-utils": "^6.0.6",
-    "next": "13.4.9",
+    "mobx-utils": "^6.0.8",
+    "next": "14.0.2",
     "react": "18.2.0",
     "react-attr-converter": "0.3.1",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
-    "regenerator-runtime": "0.13.11",
-    "tslib": "2.6.0",
+    "regenerator-runtime": "0.14.0",
+    "tslib": "2.6.2",
     "uglify-js": "^3.17.4"
   },
   "devDependencies": {
-    "@babel/core": "7.22.8",
-    "@babel/preset-env": "7.22.7",
-    "@babel/preset-react": "7.22.5",
-    "@babel/preset-typescript": "7.22.5",
+    "@babel/core": "7.23.3",
+    "@babel/preset-env": "7.23.3",
+    "@babel/preset-react": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
     "@nx/cypress": "17.1.2",
+    "@nx/eslint": "17.1.2",
     "@nx/eslint-plugin": "17.1.2",
     "@nx/jest": "17.1.2",
     "@nx/js": "17.1.2",
@@ -63,39 +64,38 @@
     "@nx/react": "17.1.2",
     "@nx/web": "17.1.2",
     "@nx/workspace": "17.1.2",
-    "@tailwindcss/forms": "0.5.3",
-    "@testing-library/react": "14.0.0",
-    "@types/babel__core": "^7.20.1",
-    "@types/css-to-style": "1.2.0",
-    "@types/jest": "29.5.2",
-    "@types/lodash": "4.14.195",
-    "@types/node": "20.8.9",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.9",
+    "@tailwindcss/forms": "0.5.7",
+    "@testing-library/react": "14.1.0",
+    "@types/babel__core": "^7.20.4",
+    "@types/css-to-style": "1.2.2",
+    "@types/jest": "29.5.8",
+    "@types/lodash": "4.14.201",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
-    "autoprefixer": "10.4.14",
-    "babel-jest": "29.6.1",
-    "cypress": "^13.0.0",
+    "autoprefixer": "10.4.16",
+    "babel-jest": "29.7.0",
+    "cypress": "^13.5.1",
     "dotenv": "16.3.1",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.9",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.15.1",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "29.6.1",
+    "jest": "29.7.0",
     "nx": "17.1.2",
-    "postcss": "8.4.25",
-    "prettier": "2.8.8",
-    "tailwindcss": "3.3.2",
+    "postcss": "8.4.31",
+    "prettier": "3.1.0",
+    "tailwindcss": "3.3.5",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
-    "webpack": "5.88.1",
-    "@nx/eslint": "17.1.2"
+    "webpack": "5.89.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [],
