--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,9 +2,11 @@
 # Please adjust to your needs (see https://www.gitpod.io/docs/config-gitpod-file)
 # and commit this file to your remote git repository to share the goodness with others.
 
+image:
+  file: .gitpod.Dockerfile
+
 tasks:
-  - init: pnpm install && pnpm build
-    # command: yarn run start
+  - init: pnpm install
 
 vscode:
   extensions:
