--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,10 @@
       "extends": [
         "plugin:@nx/typescript"
       ],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-extra-semi": "error",
+        "no-extra-semi": "off"
+      }
     },
     {
       "files": [
@@ -55,7 +58,10 @@
       "extends": [
         "plugin:@nx/javascript"
       ],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-extra-semi": "error",
+        "no-extra-semi": "off"
+      }
     }
   ]
 }
