--- a/package.json
+++ b/package.json
@@ -29,73 +29,73 @@
   "private": true,
   "dependencies": {
     "@angular/compiler": "18.0.5",
-    "@glimmer/syntax": "0.88.0",
+    "@glimmer/syntax": "0.93.1",
     "babel-plugin-transform-react-pug": "^7.0.1",
-    "core-js": "3.35.1",
+    "core-js": "3.39.0",
     "css-to-style": "1.4.0",
     "document-register-element": "1.14.10",
-    "eslint-plugin-mobx": "0.0.9",
+    "eslint-plugin-mobx": "0.0.13",
     "handlebars-to-jsx": "0.1.5",
     "is-self-closing": "1.0.1",
     "lodash": "4.17.21",
-    "mobx": "6.13.1",
+    "mobx": "6.13.5",
     "mobx-react-lite": "4.0.7",
-    "mobx-utils": "^6.0.8",
-    "next": "14.1.0",
-    "react": "18.2.0",
+    "mobx-utils": "^6.1.0",
+    "next": "15.0.4",
+    "react": "19.0.0",
     "react-attr-converter": "0.3.1",
-    "react-dom": "18.2.0",
-    "react-is": "18.2.0",
+    "react-dom": "19.0.0",
+    "react-is": "19.0.0",
     "regenerator-runtime": "0.14.1",
-    "tslib": "2.6.2",
-    "uglify-js": "^3.17.4"
+    "tslib": "2.8.1",
+    "uglify-js": "^3.19.3"
   },
   "devDependencies": {
-    "@babel/core": "7.23.9",
-    "@babel/preset-env": "7.23.9",
-    "@babel/preset-react": "7.23.3",
-    "@babel/preset-typescript": "7.23.3",
-    "@nx/cypress": "17.2.8",
-    "@nx/eslint": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/next": "17.2.8",
-    "@nx/react": "17.2.8",
-    "@nx/web": "17.2.8",
-    "@nx/workspace": "17.2.8",
-    "@tailwindcss/forms": "0.5.7",
-    "@testing-library/react": "16.0.0",
-    "@types/babel__core": "^7.20.4",
+    "@babel/core": "7.26.0",
+    "@babel/preset-env": "7.26.0",
+    "@babel/preset-react": "7.26.3",
+    "@babel/preset-typescript": "7.26.0",
+    "@nx/cypress": "20.2.1",
+    "@nx/eslint": "20.2.1",
+    "@nx/eslint-plugin": "20.2.1",
+    "@nx/jest": "20.2.1",
+    "@nx/js": "20.2.1",
+    "@nx/next": "20.2.1",
+    "@nx/react": "20.2.1",
+    "@nx/web": "20.2.1",
+    "@nx/workspace": "20.2.1",
+    "@tailwindcss/forms": "0.5.9",
+    "@testing-library/react": "16.1.0",
+    "@types/babel__core": "^7.20.5",
     "@types/css-to-style": "1.2.2",
-    "@types/jest": "29.5.11",
-    "@types/lodash": "4.14.202",
-    "@types/node": "20.11.10",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "7.0.1",
-    "@typescript-eslint/parser": "7.0.1",
-    "autoprefixer": "10.4.17",
+    "@types/jest": "29.5.14",
+    "@types/lodash": "4.17.13",
+    "@types/node": "22.10.1",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
+    "@typescript-eslint/eslint-plugin": "8.17.0",
+    "@typescript-eslint/parser": "8.17.0",
+    "autoprefixer": "10.4.20",
     "babel-jest": "29.7.0",
-    "cypress": "^13.5.1",
-    "dotenv": "16.4.1",
-    "eslint": "9.0.0",
-    "eslint-config-next": "14.1.0",
+    "cypress": "13.16.1",
+    "dotenv": "16.4.7",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-cypress": "3.0.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-cypress": "4.1.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.2",
+    "eslint-plugin-react-hooks": "5.1.0",
     "jest": "29.7.0",
-    "nx": "17.2.8",
-    "postcss": "8.4.33",
-    "prettier": "3.2.4",
-    "tailwindcss": "3.4.1",
-    "ts-jest": "29.1.2",
+    "nx": "20.2.1",
+    "postcss": "8.4.49",
+    "prettier": "3.4.2",
+    "tailwindcss": "3.4.16",
+    "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3",
-    "webpack": "5.90.0"
+    "typescript": "5.7.2",
+    "webpack": "5.97.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [],
@@ -103,6 +103,5 @@
       "uglify-js": "$uglify-js"
     }
   },
-  "packageManager": "pnpm@9.0.5"
+  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
-
