--- a/package.json
+++ b/package.json
@@ -3,28 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx serve",
-    "serve": "nx serve",
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test",
-    "lint": "nx workspace-lint && nx lint",
-    "e2e": "nx e2e",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "dev": "vite --config vite.config.ts",
+    "build": "vite build --config vite.config.ts",
+    "preview": "vite preview --config vite.config.ts",
+    "lint": "eslint apps/website/src"
   },
   "private": true,
   "dependencies": {
@@ -41,7 +23,6 @@
     "mobx": "6.15.0",
     "mobx-react-lite": "4.1.1",
     "mobx-utils": "^6.1.0",
-    "next": "15.0.4",
     "react": "19.0.0",
     "react-attr-converter": "0.3.1",
     "react-dom": "19.0.0",
@@ -55,22 +36,15 @@
     "@babel/preset-env": "7.26.0",
     "@babel/preset-react": "7.26.3",
     "@babel/preset-typescript": "7.26.0",
-    "@nx/cypress": "20.2.1",
-    "@nx/eslint": "20.2.1",
-    "@nx/eslint-plugin": "20.2.1",
-    "@nx/jest": "20.2.1",
-    "@nx/js": "20.2.1",
-    "@nx/next": "20.2.1",
-    "@nx/react": "20.2.1",
-    "@nx/web": "20.2.1",
-    "@nx/workspace": "20.2.1",
+    "@vitejs/plugin-react": "5.1.1",
+    "acorn": "4.0.13",
     "@tailwindcss/forms": "0.5.9",
     "@testing-library/react": "16.1.0",
     "@types/babel__core": "^7.20.5",
     "@types/css-to-style": "1.2.2",
     "@types/jest": "29.5.14",
     "@types/lodash": "4.17.13",
-    "@types/node": "22.10.1",
+    "@types/node": "22.12.0",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
     "@typescript-eslint/eslint-plugin": "8.17.0",
@@ -80,7 +54,8 @@
     "cypress": "14.1.0",
     "dotenv": "16.4.7",
     "eslint": "9.25.1",
-    "eslint-config-next": "15.0.4",
+    "eslint-plugin-react-refresh": "0.4.24",
+    "globals": "16.5.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "4.1.0",
     "eslint-plugin-import": "2.31.0",
@@ -88,7 +63,7 @@
     "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "5.1.0",
     "jest": "29.7.0",
-    "nx": "20.2.1",
+    "vite": "7.2.4",
     "postcss": "8.4.49",
     "prettier": "3.4.2",
     "tailwindcss": "3.4.16",
